<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMateriaActivity">

    <EditText
        android:id="@+id/etnamemateria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/nombre_materia"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etcreditosmateria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cantidad_de_creditos"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/etnamemateria"
        app:layout_constraintStart_toStartOf="@+id/etnamemateria"
        app:layout_constraintTop_toBottomOf="@+id/etnamemateria" />

    <Button
        android:id="@+id/btnsavemateria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="@+id/etcreditosmateria"
        app:layout_constraintStart_toStartOf="@+id/etcreditosmateria"
        app:layout_constraintTop_toBottomOf="@+id/etcreditosmateria" />
</androidx.constraintlayout.widget.ConstraintLayout>