<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEstudianteActivity">

    <EditText
        android:id="@+id/etestudentname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nombre_estudiante"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etmatricula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/matricula"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etestudentname"
        app:layout_constraintStart_toStartOf="@+id/etestudentname"
        app:layout_constraintTop_toBottomOf="@+id/etestudentname" />

    <Spinner
        android:id="@+id/spcarreras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnaddcarrera"
        app:layout_constraintEnd_toStartOf="@+id/btnaddcarrera"
        app:layout_constraintStart_toStartOf="@+id/etmatricula"
        app:layout_constraintTop_toTopOf="@+id/btnaddcarrera" />

    <Button
        android:id="@+id/btnaddcarrera"
        android:layout_width="43dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="@+id/etmatricula"
        app:layout_constraintStart_toEndOf="@+id/spcarreras"
        app:layout_constraintTop_toBottomOf="@+id/etmatricula" />

    <Button
        android:id="@+id/btnsaveestudent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="@+id/btnaddcarrera"
        app:layout_constraintStart_toStartOf="@+id/spcarreras"
        app:layout_constraintTop_toBottomOf="@+id/btnaddcarrera" />

</androidx.constraintlayout.widget.ConstraintLayout>